Mahout Change Log

Release 0.11.1 - unreleased

  MAHOUT-1642: Iterator class within SimilarItems class always misses the first element (Oleg Zotov via smarthi)

  MAHOUT-1675: Remove MLP from codebase (ZJaffe via smarthi)

Release 0.11.0 - 2015-08-07

  MAHOUT-1744: Deprecate lucene2seq (apalumbo)

  MAHOUT-1761: Upgraded to Apache parent pom v17 (sslavic)

  MAHOUT-1745: Purge deprecated ConcatVectorsJob from codebase (apalumbo)

  MAHOUT-1757: small fix in spca formula (smarthi)

  MAHOUT-1756: Missing +=: and *=: operators on vectors (smarthi)

  NOJIRA: Clean up CLI help for spark-rowsimilarity and fixed test that intermitently failed (pferrel)

  MAHOUT-1685: Move Mahout shell to Spark 1.3+ (dlyubimov, apalumbo)

  MAHOUT-1653: Spark 1.3 (pferrel, apalumbo)

  MAHOUT-1754: Distance and squared distance matrices routines (dlyubimov)
    
  MAHOUT-1753: First and second moment routines (dlyubimov)
    
  MAHOUT-1746: mxA ^ 2, mxA ^ 0.5 to mean the same thing as mxA * mxA and mxA ::= sqrt _ (dlyubimov)

  MAHOUT-1736: Implement allreduceBlock() on H2O (avati)
    
  MAHOUT-1752: Implement CbindScalar operator on H2O (avati)
  
  MAHOUT-1660: Hadoop1HDFSUtil.readDRMHEader should be taking Hadoop conf (dlyubimov)

  MAHOUT-1713: Performance and parallelization improvements for AB', A'B, A'A spark physical operators (dlyubimov)

  MAHOUT-1714: Add MAHOUT_OPTS environment when running Spark shell (dlyubimov)

  MAHOUT-1715: Closeable API for broadcast tensors (dlyubimov)

  MAHOUT-1716: Scala logging style (dlyubimov)

  MAHOUT-1717: allreduceBlock() operator api and Spark implementation (dlyubimov)

  MAHOUT-1718: Support for conversion of any type-keyed DRM into ordinally-keyed DRM (dlyubimov)

  MAHOUT-1719: Unary elementwise function operator and function fusions (dlyubimov)

  MAHOUT-1720: Support 1 cbind X, X cbind 1 etc. for both Matrix and DRM (dlyubimov)

  MAHOUT-1721: rowSumsMap() summary for non-int-keyed DRMs (dlyubimov)
